anypoint-connector-devkit/v/3.7/index.adoc
=  Anypoint连接器DevKit
:keywords: devkit, development, features, architecture

*MuleSoft Anypoint DevKit*或简单地*DevKit*可以开发MuleSoft Anypoint连接器。

MuleSoft连接器是MuleSoft Anypoint Platform的扩展模块，其模块可简化第三方系统和API与Mule应用程序的互连。

== 开发步骤

. 请参阅有关如何安装的详细说明 link:/anypoint-connector-devkit/v/3.7/setting-up-your-dev-environment[这里]： link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java JDK版本7]， link:https://maven.apache.org/download.cgi[Apache Maven]， link:https://www.mulesoft.com/lp/dl/studio[Anypoint Studio]和 link:/anypoint-connector-devkit/v/3.7/setting-up-your-dev-environment[Anypoint DevKit插件]来构建和测试您的连接器。您可以使用Windows，Mac或Linux开发连接器。
.  _新连接器：_
*  link:/anypoint-connector-devkit/v/3.7/creating-a-java-sdk-based-connector[创建一个Anypoint项目]  - 设置Anypoint Studio并安装连接器插件。

+
_现有连接器：_
* 点击*File*> *Import*> *Anypoint Studio*> *Anypoint Connector Project from External Location*，选择一个URL或.zip文件，并完成向导以找到并导入项目。
+
另请参阅 link:/anypoint-connector-devkit/v/3.7/creating-a-soap-connector[创建一个SOAP连接器]和 link:/anypoint-connector-devkit/v/3.7/creating-a-rest-connector[创建一个REST连接器]。
.  link:/anypoint-connector-devkit/v/3.7/setting-up-api-access[确定资源访问]  - 每个资源都有不同的访问方法，例如REST，SOAP，FTP或Java SDK功能。
.  link:/anypoint-connector-devkit/v/3.7/authentication[选择一种认证机制]  -  Mule支持OAuth V1或V2以及用户名和密码认证（称为 link:/anypoint-connector-devkit/v/3.7/connection-management[连接管理]），可用于API Key，SAML，NTLM，Kerberos，或LDAP。
.  link:/anypoint-connector-devkit/v/3.7/connector-attributes-and-operations[选择连接器的数据模型]  - 模型可以是静态Java对象或动态对象。您可以使用 link:/anypoint-studio/v/5/datasense[DataSense]  - 确定目标资源所期望的信息。
.  link:/anypoint-connector-devkit/v/3.7/defining-connector-attributes[添加连接器@属性注释]  - 为您的连接器创建代码，其中包含Mule用来指定连接器重要部分的@属性。
.  link:/anypoint-connector-devkit/v/3.7/developing-devkit-connector-tests[代码测试]  - 测试可以是单元测试，功能测试和Studio互操作性测试。
.  link:/anypoint-connector-devkit/v/3.7/connector-reference-documentation[记录您的连接器]  -  MuleSoft提供了一个模板，可以帮助您填写空白文档以帮助您的员工，帮助他人了解连接器的功能和用途。
.  link:/anypoint-connector-devkit/v/3.7/packaging-your-connector-for-release[打包你的连接器]。

==  DevKit功能

特性DevKit提供：

* 使用带有基于Eclipse的界面的Anypoint Studio进行可视化设计和实现，可简化和加速开发。
*  Maven支持。
* 连接器打包工具。
* 身份验证支持多种类型的身份验证，包括OAuth和用户名和密码身份验证。
*  DataSense支持获取远程元数据。
* 广泛的测试能力。
* 简化开发启动的示例，培训和支持。
* 批量，查询分页和DataSense查询语言支持。

DevKit是一个基于注释的工具，具有广泛的可用注释来支持其功能。有关DevKit注释的完整列表，请参阅 link:/anypoint-connector-devkit/v/3.7/annotation-reference[注释参考]。

== 什么是连接器？

Anypoint连接器是一个扩展模块，可通过REST，SOAP或Java SDK简化Mule应用程序与外部资源（例如数据库或API）之间的交互。

作为可集成开发人员隐藏API复杂性的可重用组件，自定义连接器可促进与SaaS和内部部署Web服务，应用程序和数据源的集成。使用Anypoint Studio中的Anypoint DevKit构建的连接器，运行Mule运行时环境，充当Mule Anypoint Platform的扩展。

=== 连接器体系结构

连接器在由Mule Flow构建的Mule应用程序以及作为目标资源的外部资源内运行。

image:DevKitOverviewArchitecture.png[DevKitOverviewArchitecture]

Mule连接器有两个操作面。面向骡子的一方与资源的面向目标的客户端进行通信，以使内容能够在Mule应用程序和外部面向目标的资源之间传播。

==== 面向骡子的功能

从面向骡子的一侧，连接器包括：

*  *Main Java class*。您使用`@Connector`属性注释的Java代码。有关Anypoint Connector DevKit注释的信息，请参阅 link:/anypoint-connector-devkit/v/3.7/annotation-reference[注释参考]。有关注释如何工作的信息，请参阅 link:http://en.wikipedia.org/wiki/Java_annotation[Java注释]。
*  *Connector attributes*。您使用`@Configurable`属性注解的`@Connector`类的属性。
*  *Methods*。您使用`@Processor`属性注释的功能。

其他注释定义与认证相关的功能，例如连接管理。注释允许您控制连接器的Anypoint Studio对话框的布局。数据模型和引发或传播的异常也是面向Mule的类。

当您在Studio中创建Anypoint Connector项目时，DevKit会生成一个脚手架连接器。此脚手架连接器包括用于构建连接器的`@Connector`类，`@Configurable`属性，`@Processor`方法和身份验证逻辑。

==== 面向目标的功能

连接器面向目标或面向客户端的一面取决于允许访问资源的客户端技术。此功能由一个类库和一个或多个`@Connector`类用于访问客户端功能的类组成。这个功能被称为客户端类。

客户端类通常依赖于其他类实际实现对目标资源的调用。根据您的目标，可能会为您生成或提供一些这些类。例如，如果您有一个Java客户端库，或者正在使用SOAP或REST服务，则大多数客户端代码都会在那里实现。在其他情况下，您必须自己编写代码。

== 编码连接器

DevKit允许您从头构建连接器。在创建自己的连接器之前，请查看https://www.anypoint.mulesoft.com/exchange/?type=connector&search=community[Anypoint Exchange]以获取可用连接器。连接器页面还列出了社区开放源代码连接器，可让您为日益增长的公共连接器开发社区做出贡献。

==== 连接器数据模型

连接器的数据模型由传入和传出公开操作的对象组成。虽然许多Web服务接受并返回XML或JSON数据，但适当的Mule连接器必须将客户端使用的数据格式转换为Java对象 -  POJO或表示发送到目标并从目标返回的数据对象的键值映射。 （将原始XML或JSON响应返回给Mule是未成熟，未正确实现的连接器的标志之一。）

====  REST与SOAP

REST使用POST，GET，PUT和DELETE调用来简化对HTTP的访问，以提供对资源创建，获取，放置和删除信息的访问。

DevKit提供了一组称为`@RestCall`批注的批注，可帮助为RESTful API构建连接器。

SOAP是一种与资源进行通信的传统方式，需要一个WSDL文件，它是一个XML文件，它指定了Java类的结构，方法，属性和文档的所有方面。 SOAP是一种工业标准，包含用于治理，构建和模式信息的工具。 DevKit提供了一个工具，帮助使用WSDL文件构建连接器。

====  DevKit 3.7示例默认连接器

以下是DevKit 3.7创建的开始`@Connector`和`@Configuration`类的示例：

[source, java, linenums]
----

package org.mule.modules.demojdk;

import org.mule.api.annotations.Config;

@Connector(name="demo-jdk", friendlyName="DemoJDK")
public class DemoJDKConnector {
    @Config
    ConnectorConfig config;
    /**
     * Custom processor
     *
     * {@sample.xml ../../../doc/demo-jdk-connector.xml.sample demo-jdk:greet}
     *
     * @param friend Name to be used to generate a greeting message.
     * @return A greeting message
     */
    @Processor
    public String greet(String friend) {
        /*
         * MESSAGE PROCESSOR CODE GOES HERE
         */
        return config.getGreeting() + " " + friend + ". " + config.getReply();
    }

    public ConnectorConfig getConfig() {
        return config;
    }
    public void setConfig(ConnectorConfig config) {
        this.config = config;
    }
}
----

DevKit 3.7 `@Configuration`类如下：

[source, java, linenums]
----
package org.mule.modules.demojdk.config;
import org.mule.api.annotations.components.Configuration;
import org.mule.api.annotations.Configurable;
import org.mule.api.annotations.param.Default;
@Configuration(friendlyName = "Configuration")
public class ConnectorConfig {
    /**
     * Greeting message
     */
    @Configurable
    @Default("Hello")
    private String greeting;
    /**
     * Reply message
     */
    @Configurable
    @Default("How are you?")
    private String reply;
    /**
     * Set greeting message
     *
     * @param greeting the greeting message
     */
    public void setGreeting(String greeting) {
        this.greeting = greeting;
    }
    /**
     * Get greeting message
     */
    public String getGreeting() {
        return this.greeting;
    }
    /**
     * Set reply
     *
     * @param reply the reply
     */
    public void setReply(String reply) {
        this.reply = reply;
    }
    /**
     * Get reply
     */
    public String getReply() {
        return this.reply;
    }
}
----

==  Anypoint连接器DevKit功能

DevKit支持：

*Authentication Types*

*   link:/anypoint-connector-devkit/v/3.7/connection-management[连接管理]（用户名和密码认证）
*  link:/anypoint-connector-devkit/v/3.7/oauth-v1[OAuth V1]
*  link:/anypoint-connector-devkit/v/3.7/oauth-v2[OAuth V2]
* 其他认证方案： link:/anypoint-connector-devkit/v/3.7/authentication-methods[认证方法]

*API Types*

*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-for-a-soap-service-via-cxf-client[SOAP API]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-for-a-restful-api-using-restcall-annotations[REST API]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-using-a-java-sdk[Java SDKs]

*Anypoint Platform*

*  link:/anypoint-connector-devkit/v/3.7/adding-datasense[DataSense]
*  link:/anypoint-connector-devkit/v/3.7/adding-datasense-query-language[DataSense查询语言]
*  link:/anypoint-connector-devkit/v/3.7/adding-query-pagination-support[查询分页]
*  link:/anypoint-connector-devkit/v/3.7/building-a-batch-enabled-connector[批量]
*  link:/anypoint-connector-devkit/v/3.7/installing-and-testing-your-connector-in-studio[Anypoint Studio支持]

*Connector Development Lifecycle*

*  link:/anypoint-connector-devkit/v/3.7/setting-up-your-dev-environment[设置连接器项目]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-java-sdk-based-connector[编写连接器代码]
*  link:/anypoint-connector-devkit/v/3.7/developing-devkit-connector-tests[编写连接器测试]
*  link:/anypoint-connector-devkit/v/3.7/connector-reference-documentation[记录连接器项目]
*  link:/anypoint-connector-devkit/v/3.7/packaging-your-connector-for-release[打包连接器]

== 另请参阅

*  link:/anypoint-connector-devkit/v/3.7/anypoint-connector-development[连接器开发]
*  link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]
*  https://www.anypoint.mulesoft.com/exchange/?type=connector [接头]
*  link:/anypoint-studio/v/5/datasense-enabled-connectors[启用了DataSense的连接器]
*  link:/anypoint-connector-devkit/v/3.7/annotation-reference[注释参考]
*  link:/anypoint-connector-devkit/v/3.7/anypoint-connector-examples[例子]
*  link:/anypoint-connector-devkit/v/3.7/tutorial-barn-connector[教程 - 谷仓连接器]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-using-a-java-sdk[使用Java SDK创建连接器]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-for-a-soap-service-via-cxf-client[通过CXF客户端为SOAP服务创建连接器]
*  link:/anypoint-connector-devkit/v/3.7/creating-a-connector-for-a-restful-api-using-restcall-annotations[使用@RESTCall注解为RESTful API创建连接器]
